--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ C2_Probabilistic_Models/02_Part_of_Speech_Tagging/support_files/* filter=lfs dif
 C2_Probabilistic_Models/03_Autocomplete/data/en_US.twitter.txt filter=lfs diff=lfs merge=lfs -text
 C2_Probabilistic_Models/04_Word_Embeddings/support_files/* filter=lfs diff=lfs merge=lfs -text
 C2_Probabilistic_Models/04_Word_Embeddings/data/tokenizer/* filter=lfs diff=lfs merge=lfs -text
+C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/predictions.npy filter=lfs diff=lfs merge=lfs -text
