--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,6 @@ C2_Probabilistic_Models/03_Autocomplete/data/en_US.twitter.txt filter=lfs diff=l
 C2_Probabilistic_Models/04_Word_Embeddings/support_files/* filter=lfs diff=lfs merge=lfs -text
 C2_Probabilistic_Models/04_Word_Embeddings/data/tokenizer/* filter=lfs diff=lfs merge=lfs -text
 C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/predictions.npy filter=lfs diff=lfs merge=lfs -text
+C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/test_support_files/* filter=lfs diff=lfs merge=lfs -text
+C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/model.pkl.gz filter=lfs diff=lfs merge=lfs -text
+C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/data/shakespeare_data.txt filter=lfs diff=lfs merge=lfs -text
