--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/model.pkl
 C3_Sequence_Models/02_Recurrent_Neural_Networks_for_Language_Modelling/data/shakespeare_data.txt filter=lfs diff=lfs merge=lfs -text
 C3_Sequence_Models/03_LSTMs_and_Named_Entity_Recognition/data/* filter=lfs diff=lfs merge=lfs -text
 C3_Sequence_Models/03_LSTMs_and_Named_Entity_Recognition/model.pkl.gz filter=lfs diff=lfs merge=lfs -text
+C3_Sequence_Models/04_Siamese_Networks/data/* filter=lfs diff=lfs merge=lfs -text
