--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,4 @@ C4_Attention_Models/01_Neural_Machine_Translation/data/embeddings_fr.npz filter=
 C4_Attention_Models/01_Neural_Machine_Translation/data/wmt19_can.txt filter=lfs diff=lfs merge=lfs -text
 C4_Attention_Models/01_Neural_Machine_Translation/data/wmt19_ref.txt filter=lfs diff=lfs merge=lfs -text
 C4_Attention_Models/01_Neural_Machine_Translation/data/wmt19_src.txt filter=lfs diff=lfs merge=lfs -text
+C4_Attention_Models/01_Neural_Machine_Translation/model.pkl.gz filter=lfs diff=lfs merge=lfs -text
